# TESSRAX-CANON-

./: CANON_STATUS.md  CONCEPT_REGISTRY.md  CONTRIBUTING.md  DEPLOYMENT_CONSTRAINTS.md  Dockerfile  ENGINE_CONTRACT.md  INDEX.md  Makefile  PRODUCT_BOUNDARY.md  README.md  README_QUICKSTART.md  README_SCOPE.md  SECURITY.md  TESSRAX_MASTER_NOTES.md  UNREGISTERED_CONCEPTS_REPORT.md  api_wrapper.py  pyproject.toml  vk-01.logic.md
00_README/: README.md  REPO_INTENT.md
01_CANON/: CANON-001_Systemic_Deadlock.md  CANON-002_Atrophy_of_Truth.md  CANON-003_Claim_Economy.md  CANON-004_Checkpoint_Alpha.md  CANON-004_Chronic_Exception_Duty.md  CANON-004_Computable_Interdependence.md  CANON-004_Criticality_Necessity.md  CANON-004_Elastic_Conservation.md  CANON-004_EpistemicOS_System_Verification_Report_v1.0.md  CANON-004_Irreversibility_and_Exit_Cost_Invariant.md  CANON-004_Non_Biological_Authority_Protocol_v1.0.md  CANON-004_Pre-Incident_Institutional_Forensics.md  CANON-004_Refusal_Triggers_and_State_Invalidation.md  CANON-004_Structural_Risk_Transfer_and_Control_Surfaces.md  CANON-004_The_Collapse_of_Denial.md  CANON-004_Upstream_Accountability_Protocol.md  CANON-005_Elastic-Conservation.md  CANON-005_Operator_Safeguards.md  CANON-005_Public_Benefits_Fail_Closed_Governance.md  CANON-005_Visibility_Collapse.md  CANON-005_Visibility_and_Irreversibility.md  CANON-005_Visibility_and_the_Collapse_of_Denial.md  CANON-006_Education_Aid_Fail_Closed_Governance.md  CANON-006_Receipt-and-Audit-Spec.md  CANON-007_Sovereign_Individual_State_Machine.m  CANON-016_MASTER_REALITY_AUDIT_Q1_2026.md  (+33 more)
(+169 files in other folders)
